Rework playthrough flow for multiple playthroughs per story